2010-04-30  Eli Zaretskii  <eliz@gnu.org>

	* composite.el (compose-region, reference-point-alist): Fix typos
	in the doc strings.

2010-04-29  Chong Yidong  <cyd@stupidchicken.com>

	* ido.el (ido-init-completion-maps): Remove C-v binding.
	(ido-minibuffer-setup): Don't set cua-inhibit-cua-keys (Bug#5765).

2010-04-29  Chong Yidong  <cyd@stupidchicken.com>

	* minibuffer.el (tags-completion-at-point-function): New function.
	(completion-at-point-functions): Use it.

	* cedet/semantic.el (semantic-completion-at-point-function): New function.
	(semantic-mode): Use semantic-completion-at-point-function for
	completion-at-point-functions instead.

	* progmodes/etags.el (complete-tag): Revert last change.

2010-04-29  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-mode.el (c-extend-region-for-CPP): Fix an
	off-by-one error (in end of macro position).

2010-04-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* net/browse-url.el (browse-url-firefox-program): Use iceweasel if
	firefox is absent.  Don't autoload.
	(browse-url-galeon-program): Don't autoload.

2010-04-28  Chong Yidong  <cyd@stupidchicken.com>

	* bindings.el (complete-symbol): Move into minibuffer.el.

	* minibuffer.el (complete-tag): Move from etags.el.  If tags
	completion cannot be performed, return nil instead of signalling
	an error.
	(completion-at-point): Make it an alias for complete-symbol.
	(complete-symbol): Move from bindings.el, and replace with the
	body of completion-at-point.

	* progmodes/etags.el (complete-tag): Move to minibuffer.el.

	* cedet/semantic.el (semantic-mode): When enabled, add
	semantic-ia-complete-symbol to completion-at-point-functions.

	* cedet/semantic/ia.el (semantic-ia-complete-symbol): Return nil
	if Semantic is not active.

2010-04-28  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-remote-selinux-p): New defun.
	(tramp-handle-file-selinux-context)
	(tramp-handle-set-file-selinux-context): Use it.

2010-04-28  Sam Steingold  <sds@gnu.org>
